# MoshCatty

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: prediction.md  protocol-audit-2026-07-15.md  protocol-gap-research-2026-07-15.md
scripts/: assert-max-glibc.sh
src/: ansi_apply.rs  client.rs  crypto.rs  display.rs  ecn.rs  fragment.rs  framebuffer.rs  lib.rs  prediction.rs  prediction_tests.rs  terminal.rs  transport.rs
tests/: live_mosh_prediction.rs  protocol_suite.rs  windows-conpty-input.cjs
