[package]
name = "moshcatty"
version = "0.1.7"
edition = "2021"
rust-version = "1.75"
description = "MoshCatty — pure Rust Mosh client, wire-compatible with stock mosh-server"
license = "GPL-3.0-or-later"
publish = false
authors = ["binaricat", "Netcatty contributors"]
repository = "https://github.com/binaricat/MoshCatty"
homepage = "https://github.com/binaricat/MoshCatty"
readme = "README.md"
keywords = ["mosh", "ssh", "terminal", "udp", "netcatty"]
categories = ["command-line-utilities", "network-programming"]

[features]
conpty-test-probe = []

[[bin]]
name = "mosh-client"
path = "src/bin/mosh_client.rs"

[lib]
name = "moshcatty"
path = "src/lib.rs"

[dependencies]
aes = { version = "0.8", features = ["zeroize"] }
base64 = "0.22"
flate2 = "1"
getrandom = "0.2"
thiserror = "2"
libc = "0.2"
quinn-udp = { version = "=0.5.14", default-features = false }
socket2 = "0.6"
unicode-width = "0.2.2"
zeroize = { version = "=1.8.2", default-features = false, features = ["alloc"] }

[dev-dependencies]
hex = "0.4"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
